--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,16 +1,30 @@
 <ion-content>
   <ion-item class="title" lines="none">
-    <h1 style="color:#FEFEFE; font-weight: bold; width: 100%; font-size: xx-large;">Acercar</h1>
+    <h1>ACERCAR</h1>
   </ion-item>
 
   
   <ion-item class="title" lines="none">
-    <p class="labelStyleSubTitle" style="width: 100%; font-size: medium;" no-padding>La herramienta para encontrar precios mas baratos, uniendo productores y consumidores.</p>
+    <p class="labelStyleSubTitle" no-padding>La herramienta para encontrar precios más baratos, uniendo productores y consumidores.</p>
   </ion-item>
 
-  <ion-button expand="full" color="#00AEC3" routerLink="/home" routerDirection="root">Click para comenzar</ion-button>
+  <div>
+    <img src="/assets/landing/shopping-cart.svg" text-center alt="ingresar" class="image" routerLink="/home" routerDirection="root"/>
+  </div>
+
+  <!-- <ion-button expand="full" color="#00AEC3" routerLink="/home" routerDirection="root">Click para comenzar</ion-button> -->
+
+
+  <div class="footer">
+    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+  </div>
+
+  <!-- <ion-footer class="footer" lines="none">
+    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+</ion-footer> -->
+
+
+
 </ion-content>
 
-<ion-footer class="footer">
-    <img src="/assets/img/logo.png"  style="align-content: center;" alt="icono acercar"/>
-</ion-footer>
+
