--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,11 @@
-<ion-content>
-
-  <div>
-    <img src="/assets/img/logo_negativo.png" text-center alt="icono acercar" class="image"/>
-  </div>
+<ion-content mode="ios">
 
   <ion-item class="title" lines="none">
-    <h1 style="color:#FEFEFE; font-weight: bold; width: 100%;">Acercar</h1>
+    <h1>ACERCAR</h1>
   </ion-item>
 
   <ion-item class="title" lines="none">
-    <p class="labelStyleSubTitle" style="width: 100%;" no-padding>La herramienta para encontrar precios mas baratos, uniendo productores y consumidores.</p>
+    <p class="labelStyleSubTitle" no-padding>La herramienta para encontrar precios más baratos, uniendo productores y consumidores.</p>
   </ion-item>
 
   <ion-grid fixed> 
@@ -32,3 +28,7 @@
   </ion-grid>
 
 </ion-content>
+
+<ion-footer class="ion-no-border footer">
+  <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+</ion-footer>
