--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content mode="ios">
   <ion-item class="title" lines="none">
     <h1>ACERCAR</h1>
   </ion-item>
@@ -13,18 +13,13 @@
   </div>
 
   <!-- <ion-button expand="full" color="#00AEC3" routerLink="/home" routerDirection="root">Click para comenzar</ion-button> -->
-
-
-  <div class="footer">
+  <!-- <div class="footer">
     <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
-  </div>
-
-  <!-- <ion-footer class="footer" lines="none">
-    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
-</ion-footer> -->
-
-
+  </div> -->
 
 </ion-content>
 
 
+<ion-footer class="ion-no-border footer">
+    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+</ion-footer>
