--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -32,7 +32,7 @@ div {
 .image{
   display: block;
   width: 50%;
-  margin-top: 25%;
+  margin-top: 40px;
   filter:   invert(93%) sepia(7%) saturate(14%) hue-rotate(273deg) brightness(107%) contrast(106%);
 }
 
@@ -45,8 +45,7 @@ div {
 
 .image-footer{
   display: block;
-  width: 25%;
-  margin-top: 40%;
-  margin-bottom: 20%;
+  width: 50px;
+  margin-bottom: 25px;
   filter:   invert(93%) sepia(7%) saturate(14%) hue-rotate(273deg) brightness(107%) contrast(106%);
 }
