Nueva variable color, header repartos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,10 @@
   </ion-grid>
 
 </ion-content>
-
-<ion-footer class="ion-no-border footer">
-  <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <div>
+    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+  </div>
+  </ion-toolbar>
 </ion-footer>
