--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,10 +1,10 @@
-<ion-content mode="ios">
-  <ion-item class="title" lines="none">
+<ion-content mode="ios" color="acercar">
+  <ion-item class="title" lines="none" color="acercar">
     <h1>ACERCAR</h1>
   </ion-item>
 
   
-  <ion-item class="title" lines="none">
+  <ion-item class="title" lines="none" color="acercar">
     <p class="labelStyleSubTitle" no-padding>La herramienta para encontrar precios más baratos, uniendo productores y consumidores.</p>
   </ion-item>
 
@@ -20,6 +20,10 @@
 </ion-content>
 
 
-<ion-footer class="ion-no-border footer">
-    <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+<ion-footer class="ion-no-border">
+  <ion-toolbar color="acercar">
+    <div>
+      <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
+  </div>
+  </ion-toolbar>
 </ion-footer>
