--- a/src/app/repartos/repartos.page.html
+++ b/src/app/repartos/repartos.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Repartos a tu casa</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header class="ion-no-border" translucent>
+  <ion-toolbar color="acercar">
 
+    <ion-buttons slot="start">
+
+      <ion-back-button text="" defaultHref="/home"></ion-back-button>
+
+    </ion-buttons>
+
+    <ion-title> Repartos a tu casa </ion-title>
+  </ion-toolbar>
+</ion-header> 
+
+<!-- 
+<ion-header no-shadow no-border>
+	<ion-navbar color="primary" hideBackButton> 
+	  <button ion-button menuToggle> 
+		<ion-icon [attr.role]="'img'" [attr.aria-label]="'menú'" name="menu"></ion-icon>
+	  </button> 
+	  <ion-title>Tareas Pendientes</ion-title> 
+	</ion-navbar>
+  </ion-header> -->
+  
 <ion-content>
 
   <div id="map_canvas"></div>
