inicio de pantallas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,9 +9,9 @@
   </ion-item>
 
   <ion-grid fixed> 
-    <ion-row routerLink="/repartos" routerDirection="root">
+    <ion-row>
       <ion-col size="12" size-lg="3" size-md="4" size-sm="6" size-xs="6"
-               *ngFor="let option of options">
+               *ngFor="let option of options" [routerLink]="option.link" routerDirection="root">
   
         <ion-card mode="ios">
 
