--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,9 @@
   
         <ion-card mode="ios">
 
-          <img [src]="option.img" class="option-image">
+          <ion-avatar>
+            <img [src]="option.img" class="option-image">
+          </ion-avatar>
 
           <ion-card-header>
             <ion-card-title>{{ option.title }}</ion-card-title>
