--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -9,7 +9,8 @@
   </ion-item>
 
   <div>
-    <img src="/assets/landing/shopping-cart.svg" text-center alt="ingresar" class="image" routerLink="/home" routerDirection="root"/>
+    <!-- <img src="/assets/landing/shopping-cart.svg" text-center alt="ingresar" class="image" routerLink="/home" routerDirection="root"/> -->
+    <img src="/assets/landing/Carrito.gif" text-center alt="ingresar" class="image" routerLink="/home" routerDirection="root"/>
   </div>
 
   <!-- <ion-button expand="full" color="#00AEC3" routerLink="/home" routerDirection="root">Click para comenzar</ion-button> -->
@@ -21,7 +22,7 @@
 
 
 <ion-footer class="ion-no-border">
-  <ion-toolbar color="acercar">
+  <ion-toolbar color="acercar" lines="none" no-border class="ion-no-border">
     <div>
       <img src="/assets/img/Logo-01.svg"  class="image-footer" alt="icono acercar"/>
   </div>
