--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -29,8 +29,13 @@ ion-card {
   margin-right: 15px;
 }
 
+ion-avatar {
+  width: 100%;
+  --border-radius: 0px;
+  height: 50px;
+}
 .option-image {
-  width: 45px;
+  width: 50px;
   text-align: center;
   display: block;
   margin-left: auto;
