--- a/src/app/pages/repartos/repartos.page.html
+++ b/src/app/pages/repartos/repartos.page.html
@@ -14,7 +14,7 @@
   <div id="map_canvas"></div>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="light" (click)="localizar()">
-      <ion-icon name="locate-sharp" color="primary"></ion-icon>
+      <ion-icon name="navigate" color="primary"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
