Variable para que tome siempre mode ligth

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -93,7 +93,7 @@
   --ion-color-tint: var(--ion-color-acercar-tint) !important;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   /*
    * Dark Colors
    * -------------------------------------------
