Carrito landing en blanco

--- a/src/app/landing/landing.page.scss
+++ b/src/app/landing/landing.page.scss
@@ -29,7 +29,7 @@ div {
   display: block;
   width: 50%;
   margin-top: 40px;
-  filter:   invert(93%) sepia(7%) saturate(14%) hue-rotate(273deg) brightness(107%) contrast(106%);
+  //filter:   invert(93%) sepia(7%) saturate(14%) hue-rotate(273deg) brightness(107%) contrast(106%); // para que se ve en negro
 }
 
 ion-toolbar div {
